# Projekt_FIle

./: .gitignore  Doxyfile.txt  README.md  requirements.txt
FileOrganizer/: CMakeLists.txt  Doxyfile  llmclient.cpp  llmclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scriptrunner.cpp  scriptrunner.h
FileOrganizer/.qtcreator/: CMakeLists.txt.user.ba9fc16
FileOrganizer/tests/: test_main.cpp
docs/html/: annotated.html  annotated_dup.js  class_llm_client-members.html  class_llm_client.html  class_llm_client.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_script_runner-members.html  class_script_runner.html  class_script_runner.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  llmclient_8cpp.html  llmclient_8h.html  llmclient_8h.js  llmclient_8h_source.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_ui.html  namespaces.html  navtreedata.js  navtreeindex0.js  scriptrunner_8cpp.html  scriptrunner_8h.html  scriptrunner_8h.js  scriptrunner_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  searchdata.js
